// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`v37 E2E encryption: decrypted as author 1`] = `
Array [
  Object {
    "content": Object {
      "content": "hello world",
      "meta": undefined,
      "serializable": true,
      "type": "text",
      "version": 1,
    },
    "type": "success",
  },
]
`;

exports[`v37 E2E encryption: decrypted as jack 1`] = `
Array [
  Object {
    "content": Object {
      "content": "hello world",
      "meta": undefined,
      "serializable": true,
      "type": "text",
      "version": 1,
    },
    "type": "success",
  },
]
`;

exports[`v37 E2E encryption: encrypted 1`] = `
Object {
  "author": ProfileIdentifier {
    "network": "localhost",
    "userId": "bob",
  },
  "e2e": IdentifierMap {
    "__raw_map__": Map {
      "person:localhost/jack" => Object {
        "status": "fulfilled",
        "value": Object {
          "encryptedPostKey": Uint8Array [ 2efdd4b0b30e637e0a5477269e9ffe0603739d0b2dc381b20ac256cf897b822cc6a8263039bf8a56c723528b8919a336 ],
          "target": ProfileIdentifier {
            "network": "localhost",
            "userId": "jack",
          },
        },
      },
    },
    "constructorName": Array [
      "ProfileIdentifier",
    ],
    Symbol(immer-draftable): true,
    Symbol(Symbol.toStringTag): undefined,
  },
  "identifier": PostIVIdentifier {
    "network": "localhost",
    "postIV": "Z/9AS037AaQi7QQQfq+OIw==",
  },
  "output": Uint8Array [ 9200c501329700a96c6f63616c686f7374a3626f6202c4583056301006072a8648ce3d020106052b8104000a03420004fbdd1a19eeb484e44ced760c141ff185b4bef2eb8998a052054cb7e4548716bf1032b7bbdae5dd881e40cf98e40d196bfd1f0dc2d20c3c8f71e6eb7330b5f1a19401c430e3b51fe6c57b5831460666e8ddf01b49ebb513848cc9eb014a4c322b3afbbf0af21a902912080179494adc12941bc3dbc41067ff404b4dfb01a422ed04107eaf8e2381a132c4583056301006072a8648ce3d020106052b8104000a03420004640c0574dbba0be00e7e6f0080fb2f4428f72245b5adb4d3bd95694d645a6b2423c6d09bab7075a1b9f63d7c6760189bc6b0cfa341ea1be9fe3d8b95fda37268c42251312d4d2137b78846f8cd793113e78726fef59ec68c2335a51d6a27d12d4c78172d ],
  "postKey": CryptoKey { [opaque crypto key material] },
}
`;

exports[`v37 E2E encryption: parsed 1`] = `
Object {
  "author": Ok(Some(ProfileIdentifier {
    "network": "localhost",
    "userId": "bob",
  })),
  "authorPublicKey": Ok(Some(Object {
    "algr": 2,
    "key": CryptoKey { [opaque crypto key material] },
  })),
  "encrypted": Ok(Uint8Array [ 51312d4d2137b78846f8cd793113e78726fef59ec68c2335a51d6a27d12d4c78172d ]),
  "encryption": Ok(Object {
    "ephemeralPublicKey": Object {
      "2": Ok(Object {
        "algr": 2,
        "key": CryptoKey { [opaque crypto key material] },
      }),
    },
    "iv": Ok(Uint8Array [ 67ff404b4dfb01a422ed04107eaf8e23 ]),
    "ownersAESKeyEncrypted": Ok(Uint8Array [ e3b51fe6c57b5831460666e8ddf01b49ebb513848cc9eb014a4c322b3afbbf0af21a902912080179494adc12941bc3db ]),
    "type": "E2E",
  }),
  "signature": Ok(None),
  "version": -37,
}
`;

exports[`v37 public encryption: full v37 1`] = `
Object {
  "author": ProfileIdentifier {
    "network": "localhost",
    "userId": "alice",
  },
  "identifier": PostIVIdentifier {
    "network": "localhost",
    "postIV": "AAECAwQFBgcICQoLDA0ODw==",
  },
  "output": Uint8Array [ 9200c5011c9700a96c6f63616c686f7374a5616c69636502c4583056301006072a8648ce3d020106052b8104000a03420004afdb55600abe8749b944469377a78c4d60522bb64842ccf0820a225346a8e58c931d5975900006531c46a73f84b33a03755dfbe567ec504c470dd244440dd63e930092a74132353647434dd92b4a526872524b796b6d6e6d335362754e77364f6358465f6a69773067496c57335169574e5630316a656145c410000102030405060708090a0b0c0d0e0fc463422847d65139731573ca340118fa81883ae4cffa41cb7c91d378dd43c72ebad227c7af84e61f19fd4820fca920472d68a1076ccbe42f620eb73036bc7e13eb330d6f065c1e6ea02cb219d3e8a06a31a58d3d0b52bf8a8d03a0d001119d1b93f377ceab ],
  "postKey": CryptoKey { [opaque crypto key material] },
}
`;

exports[`v37 public encryption: full v37 decrypted 1`] = `
Array [
  Object {
    "content": Object {
      "items": Array [
        Object {
          "content": "hi",
          "meta": undefined,
          "serializable": true,
          "type": "text",
          "version": 1,
        },
        Object {
          "content": "text 2",
          "meta": undefined,
          "serializable": true,
          "type": "text",
          "version": 1,
        },
      ],
      "meta": Object {
        "io.plugin.something": Object {
          "dict": Object {
            "a": Array [
              1,
              2,
            ],
            "b": true,
            "c": false,
          },
          "nul": null,
          "num": 2345,
          "str": "123",
        },
      },
      "type": "tuple",
    },
    "type": "success",
  },
]
`;

exports[`v37 public encryption: full v37 parsed 1`] = `
Object {
  "author": Ok(Some(ProfileIdentifier {
    "network": "localhost",
    "userId": "alice",
  })),
  "authorPublicKey": Ok(Some(Object {
    "algr": 2,
    "key": CryptoKey { [opaque crypto key material] },
  })),
  "encrypted": Ok(Uint8Array [ 422847d65139731573ca340118fa81883ae4cffa41cb7c91d378dd43c72ebad227c7af84e61f19fd4820fca920472d68a1076ccbe42f620eb73036bc7e13eb330d6f065c1e6ea02cb219d3e8a06a31a58d3d0b52bf8a8d03a0d001119d1b93f377ceab ]),
  "encryption": Ok(Object {
    "AESKey": Ok(Object {
      "algr": "A256GCM",
      "key": CryptoKey { [opaque crypto key material] },
    }),
    "iv": Ok(Uint8Array [ 000102030405060708090a0b0c0d0e0f ]),
    "type": "public",
  }),
  "signature": Ok(None),
  "version": -37,
}
`;

exports[`v37 public encryption: minimal v37 1`] = `
Object {
  "author": ProfileIdentifier {
    "network": "localhost",
    "userId": "alice",
  },
  "identifier": PostIVIdentifier {
    "network": "localhost",
    "postIV": "AAECAwQFBgcICQoLDA0ODw==",
  },
  "output": Uint8Array [ 9200c4829700a96c6f63616c686f7374a5616c696365c0c0930092a74132353647434dd92b4a526872524b796b6d6e6d335362754e77364f6358465f6a69773067496c57335169574e5630316a656145c410000102030405060708090a0b0c0d0e0fc422422847d751786b14798828024dea879478f32c9aed87c5f427ae352faa7b50a13721 ],
  "postKey": CryptoKey { [opaque crypto key material] },
}
`;

exports[`v37 public encryption: minimal v37 decrypted 1`] = `
Array [
  Object {
    "content": Object {
      "content": "hello world",
      "meta": undefined,
      "serializable": true,
      "type": "text",
      "version": 1,
    },
    "type": "success",
  },
]
`;

exports[`v37 public encryption: minimal v37 parsed 1`] = `
Object {
  "author": Ok(Some(ProfileIdentifier {
    "network": "localhost",
    "userId": "alice",
  })),
  "authorPublicKey": Ok(None),
  "encrypted": Ok(Uint8Array [ 422847d751786b14798828024dea879478f32c9aed87c5f427ae352faa7b50a13721 ]),
  "encryption": Ok(Object {
    "AESKey": Ok(Object {
      "algr": "A256GCM",
      "key": CryptoKey { [opaque crypto key material] },
    }),
    "iv": Ok(Uint8Array [ 000102030405060708090a0b0c0d0e0f ]),
    "type": "public",
  }),
  "signature": Ok(None),
  "version": -37,
}
`;

exports[`v38 public encryption: full v38 1`] = `
Object {
  "author": ProfileIdentifier {
    "network": "localhost",
    "userId": "alice",
  },
  "identifier": PostIVIdentifier {
    "network": "localhost",
    "postIV": "AAECAwQFBgcICQoLDA0ODw==",
  },
  "output": "🎼4/4|oEHPyYfuDpTZBp+oUpe8ChOpRJCf5CdAv8kD2NieQtbN+h4VkT+5oI44GNkCmNh6JfVmCV4V5Qtrc7IsU2tNDS9WZNWHfqjtvA14s1UHGi2Yschz9o3WwC+0tRiCfRcUAXunzP+volvqd8wNkfwqfMEou3capIT5kzQdw31RihId0xXWHjwUqzYu|AAECAwQFBgcICQoLDA0ODw==|uE2/uj+YtxNuiCBQW+q3jLZKHXRAQDxYmpia|_|Aq/bVWAKvodJuURGk3enjE1gUiu2SELM8IIKIlNGqOWM|1|bG9jYWxob3N0L2FsaWNl:||",
  "postKey": CryptoKey { [opaque crypto key material] },
}
`;

exports[`v38 public encryption: full v38 decrypted 1`] = `
Array [
  Object {
    "content": Object {
      "content": "hello world",
      "meta": undefined,
      "serializable": true,
      "type": "text",
      "version": 1,
    },
    "type": "success",
  },
]
`;

exports[`v38 public encryption: full v38 parsed 1`] = `
Object {
  "author": Ok(Some(ProfileIdentifier {
    "network": "localhost",
    "userId": "alice",
  })),
  "authorPublicKey": Ok(Some(Object {
    "algr": 2,
    "key": CryptoKey { [opaque crypto key material] },
  })),
  "encrypted": Ok(Uint8Array [ b84dbfba3f98b7136e8820505beab78cb64a1d7440403c589a989a ]),
  "encryption": Ok(Object {
    "AESKey": Ok(Object {
      "algr": "A256GCM",
      "key": CryptoKey { [opaque crypto key material] },
    }),
    "iv": Ok(Uint8Array [ 000102030405060708090a0b0c0d0e0f ]),
    "type": "public",
  }),
  "signature": Ok(None),
  "version": -38,
}
`;

exports[`v38 public encryption: minimal v38 1`] = `
Object {
  "author": ProfileIdentifier {
    "network": "localhost",
    "userId": "alice",
  },
  "identifier": PostIVIdentifier {
    "network": "localhost",
    "postIV": "AAECAwQFBgcICQoLDA0ODw==",
  },
  "output": "🎼4/4|oEHPyYfuDpTZBp+oUpe8ChOpRJCf5CdAv8kD2NieQtbN+h4VkT+5oI44GNkCmNh6JfVmCV4V5Qtrc7IsU2tNDS9WZNWHfqjtvA14s1UHGi2Yschz9o3WwC+0tRiCfRcUAXunzP+volvqd8wNkfwqfMEou3capIT5kzQdw31RihId0xXWHjwUqzYu|AAECAwQFBgcICQoLDA0ODw==|uE2/uj+YtxNuiCBQW+q3jLZKHXRAQDxYmpia|_||1|bG9jYWxob3N0L2FsaWNl:||",
  "postKey": CryptoKey { [opaque crypto key material] },
}
`;

exports[`v38 public encryption: minimal v38 decrypted 1`] = `
Array [
  Object {
    "content": Object {
      "content": "hello world",
      "meta": undefined,
      "serializable": true,
      "type": "text",
      "version": 1,
    },
    "type": "success",
  },
]
`;

exports[`v38 public encryption: minimal v38 parsed 1`] = `
Object {
  "author": Ok(Some(ProfileIdentifier {
    "network": "localhost",
    "userId": "alice",
  })),
  "authorPublicKey": Ok(None),
  "encrypted": Ok(Uint8Array [ b84dbfba3f98b7136e8820505beab78cb64a1d7440403c589a989a ]),
  "encryption": Ok(Object {
    "AESKey": Ok(Object {
      "algr": "A256GCM",
      "key": CryptoKey { [opaque crypto key material] },
    }),
    "iv": Ok(Uint8Array [ 000102030405060708090a0b0c0d0e0f ]),
    "type": "public",
  }),
  "signature": Ok(None),
  "version": -38,
}
`;
